done: -statistics, -logger -comment of methods